--- a/teamwork/users/templates/users/login.html
+++ b/teamwork/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends "contests/base.html" %}
+{% extends "index_page/base.html" %}
 
 {% block content %}
 
@@ -11,7 +11,7 @@
 	{{ form.as_p }}
 
 	<button name="submit">log in</button>
-	<input type="hidden" name="next" value="{% url 'contests:index' %}" />
+	<input type="hidden" name="next" value="{% url 'index_page:index' %}" />
 	</form>
 
 {% endblock content %}
