--- a/teamwork/users/templates/users/login.html
+++ b/teamwork/users/templates/users/login.html
@@ -1,17 +1,30 @@
-{% extends "index_page/base.html" %}
+{% extends "users/base.html" %}
+
+{% block title %}Log in{% endblock title %}
 
 {% block content %}
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-md-6 col-sm-8">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Log in</h3>
+          <form method="post" action="{% url 'users:login' %}" novalidate>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button class="btn btn-primary" name="submit">log in</button>
+            <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+<!-- 
+  <form method="post" action="{% url 'users:login' %}">
+  {% csrf_token %}
+  {{ form.as_p }}
 
-	{% if form.errors %}
-	<p> Login failed. </p>
-	{% endif %}
-
-	<form method="post" action="{% url 'users:login' %}">
-	{% csrf_token %}
-	{{ form.as_p }}
-
-	<button name="submit">log in</button>
-	<input type="hidden" name="next" value="{% url 'index_page:index' %}" />
-	</form>
+  <button name="submit">log in</button>
+  <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
+  </form> -->
 
 {% endblock content %}
