--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -1,27 +1,54 @@
-{% load static %}<!DOCTYPE html>
-
-{% block test_content %}
+{% load static %}
+<!DOCTYPE html> 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %}Test title{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block stylesheet %}{% endblock %}  
-  </head>
-<body>
-  <div class="container">
-    <p>
-      {% if user.is_authenticated %}
-        Hello, {{ user.username }}, {{ user.userprofile.team_name }} ( {{user.userprofile.team_member_1}}, {{user.userprofile.team_member_2}}, {{user.userprofile.team_member_3}} ).
-        <a href="{% url 'users:logout' %}">log out</a>
-      {% else %}
-        <a href="{% url 'users:login' %}" >log in</a>
-      {% endif %}
-    </p>
-  </div>
-</body>
-  
-{% block content %}
-{% endblock content %}
 
-{% endblock test_content %}
+<head>
+  <meta charset="utf-8">
+  <title>{% block title %}Test title{% endblock %}</title>
+  <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> {% block stylesheet %}{% endblock %}
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="/">SYSU Training System</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainMenu">
+        {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{ user.username }}
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+              <a class="dropdown-item" href="#">My Account</a>
+              <a class="dropdown-item" href="#">Change Password</a>
+              <div class="dropdown-divider"></div>
+              <!-- <a class="dropdown-item" href="{ url 'logout' }">Log out</a> -->
+              <a class="dropdown-item" href="{% url 'users:logout' %}">Log out</a>
+            </div>
+          </li>
+        </ul>
+        {% else %}
+        <form class="form-inline ml-auto">
+          <a href="{% url 'users:login' %}" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'users:register' %}" class="btn btn-primary ml-2">Register</a>
+        </form>
+        {% endif %}
+      </div>
+    </div>
+  </nav>
+  <div class="container">
+      {% block content %} {% endblock content %}
+  </div>
+  
+</body>
+
+<script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap4.js' %}"></script>
+
+</html>
