Update the front-end of the login site

--- a/teamwork/users/templates/users/base.html
+++ b/teamwork/users/templates/users/base.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     {% block stylesheet %}{% endblock %}  
   </head>
-  <body background="{% static 'users/img/circles-light.png' %}">
+  <body class="text-center" background="{% static 'users/img/circles-light.png' %}">
       <div class="container">
           {% block content %}
           {% endblock content %}
