--- a/teamwork/users/templates/users/login.html
+++ b/teamwork/users/templates/users/login.html
@@ -1,30 +1,20 @@
 {% extends "users/base.html" %}
-
+{% load staticfiles %}
+{% load widget_tweaks %}
 {% block title %}Log in{% endblock title %}
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'users/css/login.css' %}">
+{% endblock stylesheet %}
 
 {% block content %}
-  <div class="row justify-content-center">
-    <div class="col-lg-4 col-md-6 col-sm-8">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Log in</h3>
-          <form method="post" action="{% url 'users:login' %}" novalidate>
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button class="btn btn-primary" name="submit">log in</button>
-            <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-<!-- 
-  <form method="post" action="{% url 'users:login' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-
-  <button name="submit">log in</button>
-  <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
-  </form> -->
-
+  <form class="form-signin" method="post" action="{% url 'users:login' %}" novalidate>
+      {% csrf_token %}
+      <label for="id_username" class="sr-only">Username</label>
+        {{ form.username | add_class:"form-control" | attr:"placeholder:Username"}}
+      <label for="id_password" class="sr-only">Password</label> 
+        {{ form.password | add_class:"form-control" | attr:"placeholder:Password"}}
+    <button class="btn btn-primary " type="submit" name="submit">登录</button>
+    <a href="{% url 'users:register' %}" class="btn btn-outline-primary">注册</a>
+    <input  type="hidden" name="next" value="{% url 'index_page:index' %}" />
+  </form>
 {% endblock content %}
