--- a/teamwork/users/templates/users/register.html
+++ b/teamwork/users/templates/users/register.html
@@ -3,6 +3,10 @@
 {% block title %}Register{% endblock title %}
 
 {% block content %}
+
+{% if user.is_authenticated %} 
+  <p>You have login.</p>
+{% else %}
   <div class="row justify-content-center">
     <div class="col-lg-8 col-md-10 col-sm-12">
       <div class="card">
@@ -19,6 +23,7 @@
       </div>
     </div>
   </div>
+{% endif %}
 
 
 {% endblock content %}
