--- a/teamwork/users/templates/users/register.html
+++ b/teamwork/users/templates/users/register.html
@@ -1,29 +1,50 @@
 {% extends "users/base.html" %}
+{% load staticfiles %}
+{% load widget_tweaks %}
 
 {% block title %}Register{% endblock title %}
-
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'users/css/register.css' %}">
+{% endblock stylesheet %}
 {% block content %}
 
-{% if user.is_authenticated %} 
-  <p>You have login.</p>
-{% else %}
-  <div class="row justify-content-center">
-    <div class="col-lg-8 col-md-10 col-sm-12">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Register</h3>
-          <form method="post" action="{% url 'users:register' %}">
-              {% csrf_token %}
-              {{ user_form.as_p }}
-              {{ team_form.as_p }}
-              <button name="submit">register</button>
-              <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
-            </form> 
-        </div>
+  <form class="form-register" method="post" action="{% url 'users:register' %}">
+    {% csrf_token %}
+    <h2>Register</h2>
+    <hr>
+    <div class="form-group">
+      {% for field in user_form %}
+      <div class="item row">
+        {{ field.errors }}
+        <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
+        <div class="col-md-6">{{ field }}</div>
+        <!-- {% if field.help_text %}
+        <p class="help">{{ field.help_text | safe}}</p>
+        {% endif %} -->
       </div>
-    </div>
-  </div>
-{% endif %}
+      {% endfor %}
+      {% for field in team_form %}
+      <div class="item row">
+        {{ field.errors }}
+        <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
+        {% if 'Team Description' in field.label_tag  %}
+        <div class="col-md-12">{{ field }}</div>
+        {% else %}
+        <div class="col-md-6">{{ field }}</div>
+        {% endif %}
+        <!-- {% if field.help_text %}
+        <p class="help">{{ field.help_text | safe}}</p>
+        {% endif %} -->
+      </div>
+      {% endfor %}
+    </div>        
+    <button name="submit" class="btn btn-outline-primary">Register</button>
+    <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
+  </form>  
+  <p>Have an account? <a href="{% url 'users:login' %}">Click</a> to log in.</p> 
+  </div>   
+
 
 
 {% endblock content %}
+
