fix a bug may cause endless redirect and update the forms

--- a/teamwork/summary/templates/summary/display_status.html
+++ b/teamwork/summary/templates/summary/display_status.html
@@ -10,7 +10,8 @@
             <p> {{ status.contest.num_of_problem }} </p>
             <br />
             <p> {{ status.summary }}</p>
-            <p> {{ status.ac_status }}</p>
+			<p> {{ status.ac_status }}</p>
+			<p> {{ status.contributor }}</p>
 		</li>
 	</p>
 
