--- a/teamwork/contests/templates/contests/index.html
+++ b/teamwork/contests/templates/contests/index.html
@@ -11,5 +11,6 @@
 		<li> No contests have been added yet. </li>
 	{% endfor %}
 </ul>
+<a href="{% url 'contests:add_contest' %}" class="btn btn-outline-primary">添加比赛</a>
 
 {% endblock content %}
