--- a/teamwork/users/templates/users/base.html
+++ b/teamwork/users/templates/users/base.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{% block title %}This is a base{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'users/css/usersform.css' %}">
     {% block stylesheet %}{% endblock %}  
   </head>
   <body class="text-center" background="{% static 'users/img/circles-light.png' %}">
