--- a/teamwork/users/templates/users/change_password.html
+++ b/teamwork/users/templates/users/change_password.html
@@ -6,9 +6,29 @@
 {% endblock stylesheet %}
 
 {% block content %}
-  <form method="post" action="{% url 'users:change_password' %}">
+  <form class="form-users" method="post" action="{% url 'users:change_password' %}">
     {% csrf_token %}
-    {{ form.as_p }}
-	<button name="submit">Submit</button>
+    <h2>Change Password</h2>
+    <hr>
+
+    <div class="form-group">
+        {% for field in form %}
+        <div class="item row">
+          <!-- {{ field.errors }} -->
+          <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
+          <div class="col-md-6">{{ field }}</div>
+
+          <!-- {% if field.help_text %}
+            <p class="help">{{ field.help_text | safe}}</p>
+            {% endif %} -->
+          </div>
+          {% endfor %}
+          <div class="error-message bg-white text-danger">
+            {% for field in form %}
+                {{ field.errors | escape }}
+            {% endfor %}
+          </div>         
+      </div>  
+	<button name="submit" class="btn btn-primary">Submit</button>
   </form>
 {% endblock content %}
