--- a/teamwork/users/templates/users/change_password.html
+++ b/teamwork/users/templates/users/change_password.html
@@ -8,27 +8,8 @@
 {% block content %}
   <form class="form-users" method="post" action="{% url 'users:change_password' %}">
     {% csrf_token %}
-    <h2>Change Password</h2>
-    <hr>
-
-    <div class="form-group">
-        {% for field in form %}
-        <div class="item row">
-          <!-- {{ field.errors }} -->
-          <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
-          <div class="col-md-6">{{ field }}</div>
-
-          <!-- {% if field.help_text %}
-            <p class="help">{{ field.help_text | safe}}</p>
-            {% endif %} -->
-          </div>
-          {% endfor %}
-          <div class="error-message bg-white text-danger">
-            {% for field in form %}
-                {{ field.errors | escape }}
-            {% endfor %}
-          </div>         
-      </div>  
-	<button name="submit" class="btn btn-primary">Submit</button>
+    {% include 'users/forms/change_password.html' %}
+  <button name="submit" class="btn btn-primary">Submit</button>
+  <a  class="btn btn-outline-primary" href="{% url 'index_page:index'%}">Go Back</a>
   </form>
 {% endblock content %}
