--- a/teamwork/users/templates/users/base.html
+++ b/teamwork/users/templates/users/base.html
@@ -8,7 +8,7 @@
     {% block stylesheet %}{% endblock %}  
   </head>
   <body class="text-center" background="{% static 'users/img/circles-light.png' %}">
-      <div class="container">
+      <div class="container" id="mycontainer">
           {% block content %}
           {% endblock content %}
       </div>
