--- a/teamwork/users/templates/users/register.html
+++ b/teamwork/users/templates/users/register.html
@@ -5,37 +5,16 @@
 {% block title %}Register{% endblock title %}
 {% block content %}
 
-  <form class="form-users" method="post" action="{% url 'users:register' %}">
+  <form class="form-users" method="post" action="{% url 'users:register' %}" >
     {% csrf_token %}
     <h2>Register</h2>
     <hr>
     <div class="form-group">
-      {% for field in user_form %}
-      <div class="item row">
-        {{ field.errors }}
-        <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
-        <div class="col-md-6">{{ field }}</div>
-        <!-- {% if field.help_text %}
-        <p class="help">{{ field.help_text | safe}}</p>
-        {% endif %} -->
-      </div>
-      {% endfor %}
-      {% for field in team_form %}
-      <div class="item row">
-        {{ field.errors }}
-        <div class="col-md-6" align="left">{{ field.label_tag }}</div> 
-        {% if 'Team Description' in field.label_tag  %}
-        <div class="col-md-12">{{ field }}</div>
-        {% else %}
-        <div class="col-md-6">{{ field }}</div>
-        {% endif %}
-        <!-- {% if field.help_text %}
-        <p class="help">{{ field.help_text | safe}}</p>
-        {% endif %} -->
-      </div>
-      {% endfor %}
+      {% include 'users/forms/user_form.html' %}
+      {% include 'users/forms/team_form.html' %}
     </div>        
-    <button name="submit" class="btn btn-outline-primary">Register</button>
+    <button name="submit" class="btn btn-primary">Register</button>
+    <a class="btn btn-outline-primary" href="/">Go Back</a>
     <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
   </form>  
   <p>Have an account? <a href="{% url 'users:login' %}">Click</a> to log in.</p> 
