--- a/teamwork/users/templates/users/register.html
+++ b/teamwork/users/templates/users/register.html
@@ -1,29 +1,85 @@
-{% extends "users/base.html" %}
-
-{% block title %}Register{% endblock title %}
+{% extends "users/base.html" %} 
+{% load staticfiles %} 
+{% block title %}Register{% endblock title %} 
+{% block stylesheet %}
+<link rel="stylesheet" href="{% static 'users/css/register.css' %}"> 
+{% endblock stylesheet %} 
 
 {% block content %}
+  <!-- <div id="signup_div_wrapper">
+    <h1 class="mb-1 text-center">register</h1>
+    <form method="post" class="register" novalidate="novalidate">
+      <label for="reg_sr_firstname">First Name
+        <span class="required">*</span>
+      </label>
+      <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="sr_firstname" id="reg_sr_firstname"
+        value="" required="">
+      <div class="invalid-feedback">This field is required</div>
+      </p>
 
-{% if user.is_authenticated %} 
-  <p>You have login.</p>
-{% else %}
-  <div class="row justify-content-center">
-    <div class="col-lg-8 col-md-10 col-sm-12">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Register</h3>
-          <form method="post" action="{% url 'users:register' %}">
-              {% csrf_token %}
-              {{ user_form.as_p }}
-              {{ team_form.as_p }}
-              <button name="submit">register</button>
-              <input type="hidden" name="next" value="{% url 'index_page:index' %}" />
-            </form> 
-        </div>
-      </div>
-    </div>
+      <p class="woocommerce-FormRow woocommerce-FormRow--last form-row form-row-last">
+        <label for="reg_sr_lastname">Last Name
+          <span class="required">*</span>
+        </label>
+        <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="sr_lastname" id="reg_sr_lastname"
+          value="" required="">
+        <div class="invalid-feedback">This field is required</div>
+      </p>
+
+
+      <p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide">
+        <label for="reg_email">Email address
+          <span class="required">*</span>
+        </label>
+        <input type="email" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="email" id="reg_email"
+          value="" required="">
+        <div class="invalid-feedback">This field is required</div>
+      </p>
+
+
+      <p class="woocommerce-form-row woocommerce-form-row--wide form-row form-row-wide">
+        <label for="reg_password">Password
+          <span class="required">*</span>
+        </label>
+        <input type="password" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="password" id="reg_password"
+          required="">
+        <div class="invalid-feedback">This field is required</div>
+      </p>
+
+      <input type="submit" class="btn btn-brand btn-block btn-lg mb-4 mt-3" style="margin:0;" name="register" value="Sign Up">
+    </form>
+
+  </div> -->
+
+  <div id="signup_div_wrapper">
+    <form method="post" novalidate>
+      {% csrf_token %}
+      {{ user_form.non_field_errors }}
+
+      {% for hidden_field in user_form.hidden_fields %}
+        {{ hidden_field.errors }}
+        {{ hidden_field }}
+      {% endfor %}
+
+      <table border="1">
+        {% for field in user_form.visible_fields %}
+          <tr>
+            <th>{{ field.label_tag }}</th>
+            <td>
+              {{ field.errors }}
+              {{ field }}
+              {{ field.help_text }}
+            </td>
+          </tr>
+        {% endfor %}
+      </table>
+      <button type="submit">Submit</button>
+    </form>
   </div>
-{% endif %}
+
+  {{ user_form.as_p }} 
+  {{ team_form.as_p }}
 
 
-{% endblock content %}
+
+  {% endblock content %}
