--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -2,24 +2,30 @@
 
 {% block content %}
 
-	<p>Contest Detail</p>
-		<li>
-			<p> {{ contest.name }} </p>
-			<p> {{ contest.source }} </p>
-			<p> {{ contest.date }} </p>
-			<p> {{ contest.num_of_problem }} </p>
-			<p>
-				<a href="{% url 'contests:edit_contest' contest.id %}">edit contest</a>
-			</p>
-		</li>
-		<table border="1">
+
+<div class="section">
+	<h2>{{ contest.name }}</h2>
+	<p>Source: {{ contest.source }}</p>
+	<p>Start Time: {{ contest.date }}</p>
+	<p>Number of problems: {{ contest.num_of_problem }}</p>
+	<div style="text-align:right">
+		<a class="btn btn-sm btn-out-primary" href="{% url 'contests:edit_contest' contest.id %}">Edit Contest</a>
+	</div>
+</div>
+
+<div class="section">
+	<h4>Contest Result</h4>
+	<table class="table" id="result_table">
+		<thead>
 			<tr>
-				<th>Team Name</th>
+				<th scope="col">Team</th>
 				{% for i in problem %}
-				<th>{{ i }}</th>
+				<th scope="col">{{ i }}</th>
 				{% endfor %}
-				<th>Summary</th>
+				<th scope="col">Summary</th>
 			</tr>
+		</thead>
+		<tbody>
 			{% for i in summarylist %}
 			<tr>
 				<th><a href="{% url 'users:show_user' i.head %}">{{ i.tail }}</a></th>
@@ -33,8 +39,12 @@
 				<th> No Status have been added yet. </th>
 			</tr>
 			{% endfor %}
-		</table>
-		
-	</p>
+		</tbody>
+			
+	</table>
+</div>
+
 
 {% endblock content %}
+
+
