--- a/teamwork/contests/templates/contests/index.html
+++ b/teamwork/contests/templates/contests/index.html
@@ -2,15 +2,22 @@
 
 {% block content %}
 
-<p>Contests</p>
 
-<ul>
+
+<div class="section">
+	<h1>Contests</h1>
 	{% for i in contest %}
-		<li><a href="{% url 'contests:display_contest' i.id %}">{{i.name}}</a> {{i.source}} <a href="{% url 'contests:edit_contest' i.id %}">edit</a></li>
+	<hr>
+	<div class="contest_display">
+		<h2><a href="{% url 'contests:display_contest' i.id %}">{{ i.name }}</a></h2>
+		<div><p>Source: {{ i.source }}</p><p>Start Time: {{ i.date }}</p></div>
+	</div>
 	{% empty %}
-		<li> No contests have been added yet. </li>
+		<p>No contests have been added yet. </p>
 	{% endfor %}
-</ul>
-<a href="{% url 'contests:add_contest' %}" class="btn btn-outline-primary">添加比赛</a>
-
+	
+	<div style="text-align: right">
+		<a  href="{% url 'contests:add_contest' %}" class="btn btn-primary">添加比赛</a>
+	</div>
+</div>
 {% endblock content %}
