--- a/teamwork/users/templates/users/modify_profiles.html
+++ b/teamwork/users/templates/users/modify_profiles.html
@@ -15,4 +15,5 @@
   <button name="submit" class="btn btn-primary">Submit</button>
   <a class="btn btn-outline-primary" href="/">Go Back</a>
   </form>
+  {{ team_form.media }}
 {% endblock content %}
