--- a/teamwork/contests/templates/contests/add_contest.html
+++ b/teamwork/contests/templates/contests/add_contest.html
@@ -7,6 +7,7 @@
 <form action="{% url 'contests:add_contest' %}" method='post'>
 	{% csrf_token %}
 	{{ form.as_p }}
+	{{ form.media }}
 	<button name="submit">add contest</button>
 </form>
 
