--- a/teamwork/users/templates/users/show_user.html
+++ b/teamwork/users/templates/users/show_user.html
@@ -9,7 +9,7 @@
   <p>Team Member 1: {{profile.team_member_1}}</p>
   <p>Team Member 2: {{profile.team_member_2}}</p>
   <p>Team Member 3: {{profile.team_member_3}}</p>
-  <p>Team Description: {{profile.team_description}}</p>
+  <p>Team Description: {{team_description_markdown|safe}}</p>
   <table class="table">
     <thead>
       <th>Contest Name</th>
