--- a/teamwork/contests/templates/contests/edit_contest.html
+++ b/teamwork/contests/templates/contests/edit_contest.html
@@ -24,4 +24,9 @@
 		</div>
 	</form>
 </div>
+
+{{ form.media }}
+<script type="text/javascript">
+    $('.datepicker').datepicker();
+</script>
 {% endblock content %}
