--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -6,7 +6,7 @@
 <div class="section">
 	<h2>{{ contest.name }}</h2>
 	<p>Source: {{ contest.source }}</p>
-	<p>Start Time: {{ contest.date }}</p>
+	<p>Start Time: {{ contest.date|date:"Y-m-d" }}</p>
 	<p>Number of problems: {{ contest.num_of_problem }}</p>
 	<div style="text-align:right">
 		<a class="btn btn-sm btn-out-primary" href="{% url 'contests:edit_contest' contest.id %}">Edit Contest</a>
