--- a/teamwork/users/templates/users/show_user.html
+++ b/teamwork/users/templates/users/show_user.html
@@ -4,12 +4,16 @@
 {% block title %}Team Information{% endblock title %}
 {% block content %}
 <div class="section">
-  <p>Username: {{ user.username }}</p>
-  <p>Team Name: {{ profile.team_name }}</p>
-  <p>Team Member 1: {{profile.team_member_1}}</p>
-  <p>Team Member 2: {{profile.team_member_2}}</p>
-  <p>Team Member 3: {{profile.team_member_3}}</p>
-  <p>Team Description: {{team_description_markdown|safe}}</p>
+  <h2>Team Information</h2>
+  <ul>
+    <li>Team: {{ profile.team_name }}</li>
+	<li>Members: {{ profile.team_member_1 }} , {{ profile.team_member_2 }} , {{ profile.team_member_3 }}</li>
+  </ul>
+  <h2>User Information</h2>
+  <ul>
+    <li>Username: {{ user.username }}</li>
+  </ul>
+  {{team_description_markdown|safe}}
   <table class="table">
     <thead>
       <th>Contest Name</th>
