--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>{% block title %}Test title{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
-  
+  <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"> 
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% block stylesheet %}{% endblock %}
 </head>
