--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -25,8 +25,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'contests:index' %}">Contest</a>
           </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link" href="{% url 'summary:index' %}">Status</a>
+          </li> -->
           <li class="nav-item">
-              <a class="nav-link" href="{% url 'summary:index' %}">Status</a>
+            <a class="nav-link" href="{% url 'users:list_users' %}">Users</a>
           </li>
           <li class="nav-item">
               <a class="nav-link" href="{% url 'index_page:about' %}">About</a>
