--- a/teamwork/static/css/base.css
+++ b/teamwork/static/css/base.css
@@ -8,8 +8,8 @@
 .section{
     background: #fff;
     box-shadow: 0 0.375rem 1.375rem rgba(175, 194, 201, .5);
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 5%;
+    margin-right: 5%;
     margin-top: 20px;
     margin-bottom: 20px;
     padding-top: 20px;
@@ -18,23 +18,6 @@
     padding-right: 20px;
     font-size: 16px;
 }
-
-.contest_display {
-    font-size: 14px;
-}
-
-.contest_display a{
-    color: #555;
-}
-
-.contest_display a:hover{
-    color: #555;
-}
-
-.contest_display a:visit{
-    color: #555;
-}
-
 
 #result_table {
     font-size: 10px;
@@ -47,4 +30,21 @@
     text-align:left;
     padding:0.5%;
     display:inline;
+}
+
+.myforms {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+}
+
+.myforms span {
+    font-size:20px;
+}
+
+.myforms .form-group{
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
