--- a/teamwork/users/templates/users/show_user.html
+++ b/teamwork/users/templates/users/show_user.html
@@ -5,10 +5,16 @@
 {% block content %}
 <div class="section">
   <h2>Team Information</h2>
-  <ul>
-    <li>Team: {{ profile.team_name }}</li>
-	<li>Members: {{ profile.team_member_1 }} , {{ profile.team_member_2 }} , {{ profile.team_member_3 }}</li>
-  </ul>
+  <table>
+    <tr>
+      <td>Team</td>
+      <td>{{ profile.team_name }}</td>
+    </tr>
+    <tr>
+      <td>Members</td>
+      <td>{{ profile.team_member_1 }} , {{ profile.team_member_2 }} , {{ profile.team_member_3 }}</td>
+    </tr>
+  </table>
   <h2>User Information</h2>
   <ul>
     <li>Username: {{ user.username }}</li>
