Status form updated
Please check all the templates where user.id is referred.
When log out, the visit to those templates causes error

--- a/teamwork/static/css/base.css
+++ b/teamwork/static/css/base.css
@@ -48,3 +48,14 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+#status-form {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#status-form input[type=checkbox] {
+    transform: scale(2);
+    margin-top:10%;
+}
+
