--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -34,7 +34,7 @@
 	</dl> -->
 
 	<div style="text-align:right">
-		<a class="btn btn-sm btn-primary" href="">Add Summary</a>
+		<a class="btn btn-sm btn-primary" href="{% url 'summary:add_status' user.id contest.id %}">Add/Edit Summary</a>
 		<a class="btn btn-sm btn-primary" href="{% url 'contests:edit_contest' contest.id %}">Edit Contest</a>
 	</div>
 </div>
