--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>{% block title %}Test title{% endblock %}</title>
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
-  <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}"> 
+  
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% block stylesheet %}{% endblock %}
 </head>
@@ -26,7 +26,7 @@
             <a class="nav-link" href="{% url 'contests:index' %}">Contest</a>
           </li>
           <!-- <li class="nav-item">
-            <a class="nav-link" href="{% url 'summary:index' %}">Status</a>
+              <a class="nav-link" href="{% url 'summary:index' %}">Status</a>
           </li> -->
           <li class="nav-item">
             <a class="nav-link" href="{% url 'users:list_users' %}">Users</a>
@@ -52,7 +52,7 @@
         </ul>
         {% else %}
         <form class="form-inline ml-auto">
-          <a href="{% url 'users:login' %}" class="btn btn-outline-secondary">Log in</a>
+          <a href="{% url 'users:login' %}" class="btn btn-secondary">Log in</a>
           <a href="{% url 'users:register' %}" class="btn btn-primary ml-2">Register</a>
         </form>
         {% endif %}
