--- a/teamwork/users/templates/users/list_users.html
+++ b/teamwork/users/templates/users/list_users.html
@@ -4,13 +4,13 @@
 {% block title %}Our Teams{% endblock title %}
 {% block content %}
 
-<p>
+<!--<p>
 {{ page_id }} 
 </p>
 
 <p>
 {{ tot_page }}
-</p>
+</p>-->
 
 
 <div class="section">
@@ -49,7 +49,18 @@
             </tbody>
                     
         </table>
+        <div class="d-flex justify-content-between">
+            <div>
+                {% if page_id > 1 %}
+                <a class="btn btn-sm btn-primary" href="{% url 'users:list_users2' page_id|add:"-1" %}">Previous</a>
+                {% endif %}
+            </div>
+            <div>
+                {% if page_id < tot_page %}
+                <a class="btn btn-sm btn-primary" href="{% url 'users:list_users2' page_id|add:"1" %}">Next</a>
+                {% endif %}
+            </div>
+        </div>
     </div>
-
 {% endblock content %}
 
