--- a/teamwork/contests/templates/contests/display_contest.html
+++ b/teamwork/contests/templates/contests/display_contest.html
@@ -18,20 +18,14 @@
 			<th>{{ contest.num_of_problem }}</th>
 		</tr>
 		<tr>
+			<th>Type</th>
+			<th>{{ contest.contest_type }}</th>
+		</tr>
+		<tr>
 			<th>Link</th>
 			<th>{{ contest.contest_link|urlize }}</th>
 		</tr>
 	</table>
-	<!-- <dl>
-		<dt>Source:</dt>
-		<dd>{{ contest.source }}</dd>
-		<dt>Start Time:</dt>
-		<dd>{{ contest.date | date:"Y-m-d" }}</dd>
-		<dt>Number of Problems:</dt>
-		<dd>{{ contest.num_of_problem }}</dd>
-		<dt>Link:</dt>
-		<dd><a href="{{ contest.contest_link }}">Contest Link</a></dd>
-	</dl> -->
 
 	{% if user.id is not None %}
 	<div style="text-align:right">
