修复 show_user 页面 username 显示错误

--- a/teamwork/users/templates/users/show_user.html
+++ b/teamwork/users/templates/users/show_user.html
@@ -20,7 +20,7 @@
   <table cellpadding="10">
     <tr>
 	  <th>Username</th>
-	  <th>{{ user.username }}</th>
+	  <th>{{ user_c.username }}</th>
 	</tr>
   </table>
   {{team_description_markdown|safe}}
