--- a/teamwork/summary/templates/summary/edit_status.html
+++ b/teamwork/summary/templates/summary/edit_status.html
@@ -2,6 +2,9 @@
 {% load widget_tweaks %}
 {% block content %}
 
+{% for item,value in rq %}
+<p>{{item}},{{value}}</p>
+{% endfor %}
 
 <div class="section">
 	<h1>{{ tag }} Summary</h1>
