--- a/teamwork/index_page/templates/index_page/base.html
+++ b/teamwork/index_page/templates/index_page/base.html
@@ -52,7 +52,7 @@
         </ul>
         {% else %}
         <form class="form-inline ml-auto">
-          <a href="{% url 'users:login' %}" class="btn btn-secondary">Log in</a>
+          <a href="{% url 'users:login' %}?next={{request.path}}" class="btn btn-secondary">Log in</a>
           <a href="{% url 'users:register' %}" class="btn btn-primary ml-2">Register</a>
         </form>
         {% endif %}
